--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ python-decouple==3.8
 boto3==1.28.79
 django-storages==1.14.2
 celery==5.3.4
+django-celery-beat==2.5.0
 django-debug-toolbar
 Pillow
