--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ django-storages==1.14.2
 celery==5.3.4
 django-celery-beat==2.5.0
 requests==2.31.0
+psycopg2-binary==2.9.9
 django-debug-toolbar
 Pillow
