--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ celery==5.3.4
 django-celery-beat==2.5.0
 requests==2.31.0
 psycopg2-binary==2.9.9
+redis==5.0.1
+hiredis==2.2.3
 django-debug-toolbar
 Pillow
